--- a/Barracks.html
+++ b/Barracks.html
@@ -19,6 +19,7 @@
 <meta name="theme-color" content="#ffffff">
       <title>Siege XY</title>
       <body background = "MenuTextures/Barracks.jpg" >
+
       <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
@@ -196,8 +197,8 @@
     <div class="dropdown">
 <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotTortue').src='GameTextures/MG-42.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/MG-42.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotTortue').src='GameTextures/HK416.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotTortue').src='GameTextures/MG-42.png' , TortuePrimaryGun('MG-42')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/MG-42.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotTortue').src='GameTextures/HK416.png' , TortuePrimaryGun('HK416')"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
    </div>
  </div>
 
@@ -232,8 +233,8 @@
     <div class="dropdown">
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotPewdiepie').src='GameTextures/Ak5.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/Ak5.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotPewdiepie').src='GameTextures/HK416.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotPewdiepie').src='GameTextures/Ak5.png', PewdiepiePrimaryGun('Ak5')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/Ak5.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotPewdiepie').src='GameTextures/HK416.png', PewdiepiePrimaryGun('HK416')"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
    </div>
    </div>
    <img id="PrimaryWeaponSlotPewdiepie" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -267,8 +268,8 @@
     <div class="dropdown">
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/GunAK47BulletPiont.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/GunAK47BulletPiont.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/SR-2Veresk.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/SR-2Veresk.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/GunAK47BulletPiont.png' , BulletPointPrimaryGun('GunAK47BulletPiont')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/GunAK47BulletPiont.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/SR-2Veresk.png' , BulletPointPrimaryGun('SR-2Veresk')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/SR-2Veresk.png"></img>
    </div>
    </div>
    <img id="PrimaryWeaponSlotBulletPoint" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -301,8 +302,8 @@
     <div class="dropdown">
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/FBBerylVisionGun.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/FBBerylVisionGun.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/HK416.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/FBBerylVisionGun.png', VisionPrimaryGun('FBBerylVisionGun')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/FBBerylVisionGun.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/HK416.png', VisionPrimaryGun('HK416')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
    </div>
    </div>
    <img id="PrimaryWeaponSlotVision" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -336,8 +337,8 @@
     <div class="dropdown">
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotJavelin').src='GameTextures/BerettaARX160.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/BerettaARX160.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotJavelin').src='GameTextures/HK416.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotJavelin').src='GameTextures/BerettaARX160.png', JavelinPrimaryGun('BerettaARX160')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/BerettaARX160.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotJavelin').src='GameTextures/HK416.png', JavelinPrimaryGun('HK416')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
     </div>
     </div>
     <img id="PrimaryWeaponSlotJavelin" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -371,8 +372,8 @@
     <div class="dropdown">
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotRicochet').src='GameTextures/M4.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/M4.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotRicochet').src='GameTextures/MP5.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/MP5.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotRicochet').src='GameTextures/M4.png', RicochetPrimaryGun('M4')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/M4.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotRicochet').src='GameTextures/MP5.png', RicochetPrimaryGun('MP5')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/MP5.png"></img>
     </div>
     </div>
     <img id="PrimaryWeaponSlotRicochet" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -406,8 +407,8 @@
     <div class="dropdown">
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/BlackoutsF88Austeyr.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/BlackoutsF88Austeyr.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/HK416.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/BlackoutsF88Austeyr.png', BlackoutPrimaryGun('BlackoutsF88Austeyr')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/BlackoutsF88Austeyr.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/HK416.png', BlackoutPrimaryGun('HK416')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
     </div>
     </div>
     <img id="PrimaryWeaponSlotBlackout" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -468,8 +469,8 @@
     <div class="dropdown">
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
-     <img onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/Vityaz-SN.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/Vityaz-SN.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/RMB-93.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/RMB-93.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/Vityaz-SN.png', GlazePrimaryGun('Vityaz-SN')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/Vityaz-SN.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/RMB-93.png', GlazePrimaryGun('RMB-93')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/RMB-93.png"></img>
     </div>
     </div>
     <img id="PrimaryWeaponSlotGlaze" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -684,5 +685,55 @@ document.getElementById('id50').style.display='none'
 <a href="index.html">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
 </a>
+
+<script>
+if (typeof(Storage) !== "undefined") {
+
+  var image = localStorage.getItem("TortuePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("TortuePrimary");
+  document.getElementById('PrimaryWeaponSlotTortue').src="GameTextures/"+ image +".png";
+  var image = localStorage.getItem("BulletPointPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BulletPointPrimary");
+  document.getElementById('PrimaryWeaponSlotBulletPoint').src="GameTextures/"+ image +".png";
+  var image = localStorage.getItem("BlackoutPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BlackoutPrimary");
+  document.getElementById('PrimaryWeaponSlotBlackout').src="GameTextures/"+ image +".png";
+  var image = localStorage.getItem("PewdiepiePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("PewdiepiePrimary");
+  document.getElementById('PrimaryWeaponSlotPewdiepie').src="GameTextures/"+ image +".png";
+  var image = localStorage.getItem("VisionPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("VisionPrimary");
+  document.getElementById('PrimaryWeaponSlotVision').src="GameTextures/"+ image +".png";
+  var image = localStorage.getItem("JavelinPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("JavelinPrimary");
+  document.getElementById('PrimaryWeaponSlotJavelin').src="GameTextures/"+ image +".png";
+  var image = localStorage.getItem("RicochetPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("RicochetPrimary");
+  document.getElementById('PrimaryWeaponSlotRicochet').src="GameTextures/"+ image +".png";
+  var image = localStorage.getItem("GlazePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("GlazePrimary");
+  document.getElementById('PrimaryWeaponSlotGlaze').src="GameTextures/"+ image +".png";
+
+} else {
+document.getElementById("result").innerHTML = "Sorry, your browser does not support Web Storage...";
+}
+
+function TortuePrimaryGun(image){
+localStorage.setItem("TortuePrimary", image);
+}
+function BulletPointPrimaryGun(image){
+localStorage.setItem("BulletPointPrimary", image);
+}
+function BlackoutPrimaryGun(image){
+localStorage.setItem("BlackoutPrimary", image);
+}
+function PewdiepiePrimaryGun(image){
+localStorage.setItem("PewdiepiePrimary", image);
+}
+function VisionPrimaryGun(image){
+localStorage.setItem("VisionPrimary", image);
+}
+function JavelinPrimaryGun(image){
+localStorage.setItem("JavelinPrimary", image);
+}
+function RicochetPrimaryGun(image){
+localStorage.setItem("RicochetPrimary", image);
+}
+function GlazePrimaryGun(image){
+localStorage.setItem("GlazePrimary", image);
+}
+</script>
 </body>
 <html>
