Made it so you can chose classes

--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -223,7 +223,7 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Blackout.png"></img>
     </div>
     <div class="square"></div>
-     <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/BlackoutsF88Austeyr.png"></img>
+     <img id="PrimaryWeaponBlackout" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
      <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/SIGSauerP226.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: F88 Austeyr</p>
@@ -243,7 +243,7 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Pewdiepie.png"></img>
     </div>
     <div class="square"></div>
-    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/Ak5.png"></img>
+    <img id="PrimaryWeaponPewdiepie" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
     <!-- <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/Tokarev.png"></img> -->
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: Ak 5 </p>
@@ -263,7 +263,7 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/BulletPoint.png"></img>
     </div>
     <div class="square"></div>
-    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/GunAK47BulletPiont.png"></img>
+    <img id="PrimaryWeaponBulletPoint" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
     <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/Tokarev.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: AK-47</p>
@@ -283,8 +283,8 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Tortue.png"></img>
     </div>
     <div class="square"></div>
-    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/MG-42.png"></img>
     <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/Glock17.png"></img>
+    <img id="PrimaryWeaponTortue" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: MG-42</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: Glock 17</p>
@@ -303,7 +303,7 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Vision.png"></img>
     </div>
     <div class="square"></div>
-    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/FBBerylVisionGun.png"></img>
+    <img id="PrimaryWeaponVision" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: FB Beryl</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
@@ -322,7 +322,7 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Javelin.png"></img>
     </div>
     <div class="square"></div>
-    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/BerettaARX160.png"></img>
+    <img id="PrimaryWeaponJavelin" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: Beretta ARX 160</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
@@ -341,7 +341,7 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Ricochet.png"></img>
     </div>
     <div class="square"></div>
-    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/M4.png"></img>
+    <img id="PrimaryWeaponRicochet" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: M4</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
@@ -351,6 +351,22 @@ window.addEventListener("load", function(){
     </div>
   </form>
 </div>
+<script>
+
+var image = localStorage.getItem("BlackoutPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BlackoutPrimary");
+document.getElementById('PrimaryWeaponBlackout').src="GameTextures/"+ image +".png";
+var image = localStorage.getItem("TortuePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("TortuePrimary");
+document.getElementById('PrimaryWeaponTortue').src="GameTextures/"+ image +".png";
+var image = localStorage.getItem("PewdiepiePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("PewdiepiePrimary");
+document.getElementById('PrimaryWeaponPewdiepie').src="GameTextures/"+ image +".png";
+var image = localStorage.getItem("RicochetPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("RicochetPrimary");
+document.getElementById('PrimaryWeaponRicochet').src="GameTextures/"+ image +".png";
+var image = localStorage.getItem("VisionPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("VisionPrimary");
+document.getElementById('PrimaryWeaponVision').src="GameTextures/"+ image +".png";
+var image = localStorage.getItem("BulletPointPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BulletPointPrimary");
+document.getElementById('PrimaryWeaponBulletPoint').src="GameTextures/"+ image +".png";
+var image = localStorage.getItem("JavelinPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("JavelinPrimary");
+document.getElementById('PrimaryWeaponJavelin').src="GameTextures/"+ image +".png";
 
   </script>
  </body>
