enemies look at you properly

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -73,8 +73,10 @@ div#load_screen > div#loading{
         user-select:none;
       }
 
-
-
+        #ter1, #ter2, #ter3 {
+            transform-origin: 30% 50%;
+        }
+        
       #Blackout, #Tortue, #PewDiePie {
         position: absolute;
         pointer-events: none;
@@ -154,8 +156,8 @@ div#load_screen > div#loading{
           <img id="layer1" src="GameTextures/Train Station33.png" alt="Layer 1">
           <img id="layer2"src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
           <img id="ter1" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 1565px; top: 420px;">
-          <img id="ter1" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 1120px; top: 840px;">
-          <img id="ter1" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 715px; top: 1425px;">
+          <img id="ter2" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 1120px; top: 840px;">
+          <img id="ter3" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 715px; top: 1425px;">
           <!-- <img id="terrorist1" src="GameTextures/Terrorist1.png" alt="Terrorist1"> -->
         </div>
       <svg id="walls" height="4000" width="4000">
