--- a/Barracks.html
+++ b/Barracks.html
@@ -234,7 +234,7 @@
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
      <img onclick="document.getElementById('PrimaryWeaponSlotPewdiepie').src='GameTextures/Ak5.png', PewdiepiePrimaryGun('Ak5')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/Ak5.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotPewdiepie').src='GameTextures/HK416.png', PewdiepiePrimaryGun('HK416')"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotPewdiepie').src='GameTextures/CBJ-MS.png', PewdiepiePrimaryGun('CBJ-MS')"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/CBJ-MS.png"></img>
    </div>
    </div>
    <img id="PrimaryWeaponSlotPewdiepie" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -303,7 +303,7 @@
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
      <img onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/FBBerylVisionGun.png', VisionPrimaryGun('FBBerylVisionGun')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/FBBerylVisionGun.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/HK416.png', VisionPrimaryGun('HK416')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/PM-84Glauberyt.png', VisionPrimaryGun('PM-84Glauberyt')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/PM-84Glauberyt.png"></img>
    </div>
    </div>
    <img id="PrimaryWeaponSlotVision" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -338,7 +338,7 @@
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
      <img onclick="document.getElementById('PrimaryWeaponSlotJavelin').src='GameTextures/BerettaARX160.png', JavelinPrimaryGun('BerettaARX160')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/BerettaARX160.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotJavelin').src='GameTextures/HK416.png', JavelinPrimaryGun('HK416')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotJavelin').src='GameTextures/FranchiSpas-15.png', JavelinPrimaryGun('FranchiSpas-15')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/FranchiSpas-15.png"></img>
     </div>
     </div>
     <img id="PrimaryWeaponSlotJavelin" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -408,7 +408,7 @@
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
      <img onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/BlackoutsF88Austeyr.png', BlackoutPrimaryGun('BlackoutsF88Austeyr')" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/BlackoutsF88Austeyr.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/HK416.png', BlackoutPrimaryGun('HK416')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/LMTMARS-L.png', BlackoutPrimaryGun('LMTMARS-L')" style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/LMTMARS-L.png"></img>
     </div>
     </div>
     <img id="PrimaryWeaponSlotBlackout" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
