--- a/TrainStation.html
+++ b/TrainStation.html
@@ -76,7 +76,7 @@ div#load_screen > div#loading{
         #ter1, #ter2, #ter3 {
             transform-origin: 30% 50%;
         }
-        
+
       #Blackout, #Tortue, #PewDiePie {
         position: absolute;
         pointer-events: none;
@@ -166,6 +166,16 @@ div#load_screen > div#loading{
               <rect class="collision" x="0" y="3970" height="30" width="4000" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
               <rect class="collision" x="3970" y="0" height="4000" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
               <rect class="collision" x="30" y="1970" height="350" width="140" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+
+              <rect class="collision" x="0" y="0" height="30" width="4000" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collision" x="0" y="0" height="4000" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collision" x="0" y="3970" height="30" width="4000" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collision" x="3970" y="0" height="4000" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collision" x="30" y="1970" height="350" width="140" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+
+              <rect class="collisionT" x="1590" y="445" height="30" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collisionT" x="1145" y="865" height="30" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collisionT" x="740" y="1480" height="30" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
       </svg>
 
     <div id='static'>
