--- a/TrainStation.html
+++ b/TrainStation.html
@@ -272,12 +272,12 @@ div#load_screen > div#loading{
     </div>
   </body>
 
-  <div id="idMenu" class="modal">
+  <div id="idMenu" class="modal" style="z-index: 9999;">
       <div class="container">
         <div class="square"></div>
-
+<a href="index.html">
       <button href="index.html" style="left: 50%; top: 34%;">Leave Game</button>
-
+</a>
         <button style="left: 50%; top: 10%; ">Options</button>
           <button style="left: 50%; top: 18%; ">Settings</button>
           <button style="left: 50%; top: 26%; ">Restart</button>
