Added restart button

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -280,7 +280,9 @@ div#load_screen > div#loading{
 </a>
         <button style="left: 50%; top: 10%; ">Options</button>
           <button style="left: 50%; top: 18%; ">Settings</button>
+          <a href="TrainStation.html">
           <button style="left: 50%; top: 26%; ">Restart</button>
+        </a>
       <div class="container" style="background-color:#f1f1f1">
       </div>
   </div>
