Made you slower when holding defualt weapon

--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -143,7 +143,7 @@ window.addEventListener("load", function(){
    <div id="load_screen"><div id="loading">Loading</div></div>
 
 
-   <iframe id="Music" src="SoundEffects/Background Music Game.mp3" allow="autoplay" loop controls>
+   <iframe id="Music" src="SoundEffects/Background Music Game.mp3" allow="autoplay" loop >
    </iframe>
 
    <canvas id="my-canvas"></canvas>
