--- a/TrainStation.html
+++ b/TrainStation.html
@@ -264,6 +264,9 @@ div#load_screen > div#loading{
               <rect class="collision" x="1909" y="140" height="1046" width="21" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="1909" y="0" height="54" width="21" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="30" y="1970" height="350" width="140" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
+              <rect x="160" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect x="367" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect x="669" y="1318" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
 
               <rect class="collisionT" x="1590" y="445" height="30" width="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collisionT" x="1145" y="865" height="30" width="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
