tryed to make it so vision collision works

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -236,11 +236,11 @@ div#load_screen > div#loading{
     <script src="Howler.js"></script>
       <div id="divGame">
           <img id="layer1" src="GameTextures/Train Station33.png" alt="Layer 1">
-          <img id="layer2"src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
+          <img id="layer2" src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
           <img id="ter1" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 1565px; top: 420px;">
           <img id="ter2" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 1120px; top: 840px;">
           <img id="ter3" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 715px; top: 1410px;">
-          <!-- <img id="terrorist1" src="GameTextures/Terrorist1.png" alt="Terrorist1"> -->
+
         </div>
       <svg id="walls" height="4000" width="4000">
               <rect class="collision" x="0" y="0" height="30" width="4000" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
@@ -264,10 +264,11 @@ div#load_screen > div#loading{
               <rect class="collision" x="1909" y="140" height="1046" width="21" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="1909" y="0" height="54" width="21" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="30" y="1970" height="350" width="140" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
-              
-              <rect x="160" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
-              <rect x="367" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
-              <rect x="669" y="1318" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+
+              <rect class="collisionVision" x="160" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collisionVision" x="367" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collisionVision" x="669" y="1318" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collisionVision" x="856" y="1318" height="190" width="90" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
 
               <rect class="collisionT" x="1590" y="445" height="30" width="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collisionT" x="1145" y="865" height="30" width="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
